# framez

./: Cargo.toml  README.md  cspell.json
.github/workflows/: build-and-test.yml
examples/: owned.rs  stream.rs  zerocopy.rs
fraims/: Cargo.toml
fraims-demo/: Cargo.toml
fraims-demo/examples/: zerocopy-demo.rs
fraims-demo/src/: codec.rs  header.rs  lib.rs  payload.rs
fraims/examples/: owned.rs  zerocopy.rs
fraims/src/: framed.rs  framed_core.rs  framed_impl.rs  lib.rs  state.rs  tests.rs  write.rs
fraims/src/codec/: delimiter.rs
fraims/src/logging/: mod.rs
fraims/src/read/: error.rs  framed.rs  mod.rs  next.rs  owned.rs  state.rs
framez/: Cargo.toml
framez-demo/: Cargo.toml
framez-demo/examples/: zerocopy-demo.rs
framez-demo/src/: codec.rs  packet.rs  payload_content.rs  payload_type.rs  raw_packet.rs  tests.rs
framez/examples/: echo.rs  owned.rs  stream.rs  zerocopy.rs
framez/src/: decode.rs  encode.rs  error.rs  framed.rs  framed_core.rs  functions.rs  lib.rs  macros.rs  mock.rs  next.rs  state.rs  tests.rs
framez/src/codec/: bytes.rs  delimiter.rs  lines.rs  mod.rs
framez/src/logging/: mod.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: decode.rs  encode.rs  incoming.rs  owned.rs  receive.rs  send_receive.rs  stream.rs  zerocopy.rs  zerocopy_incoming.rs
src/: decode.rs  lib.rs  read.rs  tests.rs  write.rs
src/codec/: bytes.rs  delimiter.rs  lines.rs  mod.rs
src/read/: error.rs  framed.rs  owned.rs
